Updated dependencies, fix sex rule.